<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.ForgotPassword.FpSelect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/fp_select"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fp_det"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/light_white"
            android:padding="10dp">

            <ImageView
                android:contentDescription="@string/sms"
                android:id="@+id/fp_mobile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/mobile" />

            <TextView
                android:id="@+id/fp_mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_toEndOf="@id/fp_mobile"
                android:text="@string/sms"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/fp_mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fp_mobile_title"
                android:layout_toEndOf="@id/fp_mobile"
                android:text="@string/fp_sms"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/fp_sms_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="callOtpScreen"
                android:background="@drawable/flag_transparent" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/light_white"
            android:padding="10dp">

            <ImageView
                android:contentDescription="@string/email"
                android:id="@+id/fp_email"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/fp_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_toEndOf="@id/fp_email"
                android:text="@string/sms"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/fp_email_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fp_email_title"
                android:layout_toEndOf="@id/fp_email"
                android:text="@string/fp_email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/fp_email_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent" />


        </RelativeLayout>


    </LinearLayout>

</ScrollView>