<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".Common.Login.StartScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/name"
            android:padding="8dp"
            android:src="@drawable/safehome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/appMoto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/log_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:onClick="callLoginScreen"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:padding="8dp"
                android:text="@string/signup"
                android:onClick="callSignupScreen"
                android:transitionName="transition_signup"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/how"
            android:textColor="@color/black" />


    </LinearLayout>

</ScrollView>